--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -48,7 +48,7 @@ security:
   # Note: Only the *first* access control that matches will be used
   access_control:
     - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-    - { path: ^/api/users, roles: IS_AUTHENTICATED_FULLY }
+    #- { path: ^/api/users, roles: IS_AUTHENTICATED_FULLY }
     - {
         path: ^/api/projects,
         roles: IS_AUTHENTICATED_FULLY,
